2016-04-14  Brent Fulgham  <bfulgham@apple.com>

        Make <a download> a runtime enabled option
        https://bugs.webkit.org/show_bug.cgi?id=156583
        <rdar://problem/25733449>

        Reviewed by Alex Christensen.

        Add a download attribute runtime flag based on preferences.
        Disable the download attribute by default.

        * Shared/WebPreferencesDefinitions.h:
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesGetFetchAPIEnabled):
        (WKPreferencesSetDownloadAttributeEnabled):
        (WKPreferencesGetDownloadAttributeEnabled):
        * UIProcess/API/C/WKPreferencesRefPrivate.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):

2016-04-14  Alex Christensen  <achristensen@webkit.org>

        Build fix after r199554.

        * CMakeLists.txt:
        * PlatformMac.cmake:

2016-04-14  Brian Burg  <bburg@apple.com>

        Web Automation: suppress automatic text correction in pages controlled by automation
        https://bugs.webkit.org/show_bug.cgi?id=156599
        <rdar://problem/25712646>

        Reviewed by Timothy Hatcher.

        If the page is controlled by automation, then automatic text corrections will
        cause unexpected behaviors by nondeterministically modifying text inserted by
        a test. Just pretend these behaviors are disabled if controlled by automation.

        * WebProcess/WebCoreSupport/mac/WebEditorClientMac.mm:
        (WebKit::WebEditorClient::isAutomaticQuoteSubstitutionEnabled):
        (WebKit::WebEditorClient::isAutomaticDashSubstitutionEnabled):
        (WebKit::WebEditorClient::isAutomaticTextReplacementEnabled):
        (WebKit::WebEditorClient::isAutomaticSpellingCorrectionEnabled):

2016-04-14  Anders Carlsson  <andersca@apple.com>

        Try to fix the Yosemite build.
